# MovieNight

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yaml
app/: config.py  dependencies.py  main.py  session_store.py
app/routers/: auth.py  movies.py  pages.py
app/services/: plex_service.py
app/static/css/: app.css
app/templates/: base.html  generate.html  index.html  login_waiting.html
app/templates/partials/: filter_form.html  movie_cards.html  nav.html  server_select.html
